# nlquery

./: .gitignore  Dockerfile  Dockerfile.multistage  README.md  docker-clean.sh  docker-compose.yml  main.py  pyproject.toml
client/: next.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.json
client/src/app/: ThemeProvider.tsx  globals.css  layout.js  old-page.js  page.js
client/src/auth/: auth-client.ts  helpers.ts  index.js  index.ts  signin-helpers.ts
client/src/components/: feature-list.jsx  forms.jsx  mode-switcher.js  nlquery-logo-banner.js  upload-file-button.jsx
models/: .env  config.py  dataset.py  env.yaml  llm-experiment.py  plotly_model.py  pyproject.toml  queryengine.py
models/data/: plotly-scraped-data.pkl  revenue_last3m.csv  temp_last3m.csv
models/scrape/: data-scraping.ipynb
nlquery-d3-experiments/: _llm_generated_plotly.html  claude-plotly-example.html  dummy_data.csv  index.html  llm-experiment.ipynb  plotly-example.html  plotly-training-examples.json
nlquery-d3-experiments/.ipynb_checkpoints/: llm-experiment-checkpoint.ipynb
server/: Makefile  go.mod  go.sum  logging.go  main.go  query.sql  schema.sql  sqlc.yml
server/cards/: cards.go  controller.go
server/controllers/: controllers.go
server/core/: chat.go
server/internal/: handlers.go  logging.go  router.go  wrappers.go
server/internal/auth/: auth.go
server/ports/: threads.go
server/threads/: controller.go
server/users/: models.go  query.sql.go  users.sql.go
server/utils/: handlers.go  logging.go
ui/: package-lock.json  package.json
(+44 files in other folders)
