[tool.poetry]
name = "nlquery"
version = "0.1.0"
description = "A BI dashboard powered by natural language"
authors = ["Barun Das <barun.das.23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
pydantic = "^2.8.2"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
